@@ -137,15 +137,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven-surefire-version}</version>
+        <version>3.2.5</version>
         <configuration>
-          <argLine>${argLine} -XX:MaxPermSize=256m</argLine>
+          <testSourceDirectory>src/main/test</testSourceDirectory>
+          <includes>
+            <include>**/*.java</include>
+          </includes>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.2</version>
+        <version>0.8.11</version>
         <executions>
           <execution>
             <goals>
